# ComfyUI-Egregora-Audio-Super-Resolution

./: .gitignore  README.md  __init__.py  egregora_audio_enhance_extras.py  egregora_audio_eval_pack.py  egregora_audio_super_resolution.py  egregora_fat_llama_cpu.py  egregora_fat_llama_gpu.py  egregora_null_test_suite.py  flashsr_min.py  install.py  pyproject.toml  requirements.txt
Example/: Audio Super Resolution.json
