[project]
name = "egregora-audio-super-resolution"
description = "✨High‑quality music audio enhancement for ComfyUI: FlashSR Super‑Resolution + Fat Llama spectral enhancement (GPU & CPU)."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core", "numpy>=1.26", "scipy>=1.11", "soundfile>=0.12", "tqdm>=4.66", "requests>=2.31", "huggingface_hub>=0.24", "# Models / processors used by your nodes", "fat-llama>=1.1.0", "fat-llama-fftw>=1.0.4.4", "pyrnnoise>=0.3.8", "nara-wpe>=0.0.9          # import name: nara_wpe", "deepfilternet>=0.5.6     # import name: df", "descript-audio-codec>=1.0.0"]

[project.urls]
Repository = "https://github.com/lucasgattas/ComfyUI-Egregora-Audio-Super-Resolution"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lucasgattas/ComfyUI-Egregora-Audio-Super-Resolution/wiki"
"Bug Tracker" = "https://github.com/lucasgattas/ComfyUI-Egregora-Audio-Super-Resolution/issues"

[tool.comfy]
PublisherId = "mrgattax"
DisplayName = "ComfyUI-Egregora-Audio-Super-Resolution"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

